[Fix] #14: BuildingResponse 수정